Add alias resolving for `pbjs` channel to RubiconAnalyticsReporter. (#957)